# fomoh

./: LICENSE  README.md  pyproject.toml  setup.cfg
notebooks/: FoMoH_NeuralNetwork.ipynb  Fomoh_Rosenblock_Example.ipynb
scripts/: train.py  train_functions.py
scripts/Rosenbrock/: Rosenbrock_ND.py  Rosenbrock_ND_dim_comparison.py
scripts/cnn/: train_model.sh  train_model_sched.sh  tune_cnn_bp.yaml  tune_cnn_bp_with_fomoh.yaml  tune_cnn_fgd.yaml  tune_cnn_fomoh.yaml  tune_cnn_fomoh_2d.yaml
scripts/logistic_regression/: train_model.sh  train_model_sched.sh  tune_logreg.yaml  tune_logreg_bp.yaml  tune_logreg_bp_with_fomoh.yaml  tune_logreg_fgd.yaml  tune_logreg_fomoh_2d.yaml
src/fomoh/: hyperdual.py  layers.py  nn.py  nn_models_torch.py  opt.py  util.py
tests/: unit_tests.py
